[gd_scene load_steps=18 format=2]

[ext_resource path="res://Tilesheets/colored_transparent.png" type="Texture" id=1]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://SFX/merchant_evil_form.wav" type="AudioStream" id=4]
[ext_resource path="res://Boss/MerchantBoss.gd" type="Script" id=5]
[ext_resource path="res://SFX/boss_magic_attack.wav" type="AudioStream" id=6]
[ext_resource path="res://Animations/boss_stage1.tres" type="Animation" id=7]
[ext_resource path="res://Boss/BossStats.gd" type="Script" id=8]
[ext_resource path="res://Boxes/Hitbox.gd" type="Script" id=9]
[ext_resource path="res://Animations/boss_magic_attack.tres" type="Animation" id=10]
[ext_resource path="res://Animations/boss_stage2.tres" type="Animation" id=11]

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -3.48021, -5.30155, -3.62052, -1.58339, -5.79529, -1.37293, -6.63714, 4.6603, -3.82687, 7.62585, 3.59775, 7.62585, 6.62195, 4.59015, 5.70995, -1.30278, 3.53518, -1.65355, 3.53518, -5.51201, 1.50071, -7.61663, -1.58606, -7.54647 )

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="CircleShape2D" id=3]
radius = 8.87213

[sub_resource type="CircleShape2D" id=4]
radius = 9.0

[sub_resource type="Animation" id=6]
resource_name = "boss_move"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -3.0, 3.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "boss_hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.345098, 0.345098, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MerchantBoss" type="KinematicBody2D" groups=[
"Boss",
]]
collision_layer = 16
collision_mask = 4
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 478, 69, 13, 14 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 32

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
shape = SubResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 8
script = ExtResource( 9 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
visible = false
shape = SubResource( 4 )

[node name="ProjectileShootPosition" type="Position2D" parent="."]
scale = Vector2( 1, 1 )

[node name="ProjectileShootTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0

[node name="StageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -40.0
max_distance = 250.0

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -30.0

[node name="StageAnimation" type="AnimationPlayer" parent="."]
anims/boss_stage1 = ExtResource( 7 )
anims/boss_stage2 = ExtResource( 11 )

[node name="AttackAnimation" type="AnimationPlayer" parent="."]
anims/boss_magic_attack = ExtResource( 10 )

[node name="MoveAnimation" type="AnimationPlayer" parent="."]
anims/boss_move = SubResource( 6 )

[node name="HitAnimation" type="AnimationPlayer" parent="."]
anims/boss_hit = SubResource( 7 )

[node name="DeathAnimation" type="AnimationPlayer" parent="."]

[node name="BossStats" type="Node" parent="."]
script = ExtResource( 8 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="ProjectileShootTimer" to="." method="_on_ProjectileShootTimer_timeout"]
[connection signal="health_changed" from="BossStats" to="." method="_on_BossStats_health_changed"]
[connection signal="no_health" from="BossStats" to="." method="_on_BossStats_no_health"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
